welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value num
      maxi = num(i)
             ^